--- a/website/vercel.json
+++ b/website/vercel.json
@@ -1,8 +1,10 @@
 {
   "version": 2,
+  "name": "social-media-feed",
+  "builds": [
+    { "src": "public/**", "use": "@vercel/static" }
+  ],
   "routes": [
-    { "handle": "filesystem" },
-    { "src": "/api/(.*)", "dest": "/api/$1" },
     { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
