more vercel and testing w firebase

--- a/website/vercel.json
+++ b/website/vercel.json
@@ -2,9 +2,12 @@
   "version": 2,
   "name": "social-media-feed",
   "builds": [
-    { "src": "public/**", "use": "@vercel/static" }
+    { "src": "*.html", "use": "@vercel/static" },
+    { "src": "css/**", "use": "@vercel/static" },
+    { "src": "js/**", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/public/$1" }
+    { "src": "/(.*)", "dest": "/$1" },
+    { "src": "/", "dest": "/index.html" }
   ]
 }
